Correct Text Domian Name

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
-Theme Name: new theme
+Theme Name: RealEstate Theme
 Version: 1.0
 Requires at least: 4.7
 Requires PHP: 5.2.4
-Description: this is simple theme
-Author: alireza
-Text Domain: new-theme
+Description: this is a realEstate theme
+Author: pardis
+Text Domain: realEstate
 domain path: /languages/
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
